<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/activities"
        android:title="@string/title_activities" />
    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/daily"
        android:title="@string/title_daily" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/logomic"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop"
        android:title="@string/title_shop" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />

</menu>