<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.polihack.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.example.polihack.ui.daily.DailyFragment"
        android:label="@string/title_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.example.polihack.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.polihack.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.polihack.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />
</navigation>